<resources>
    <string name="app_name">CloudMusic</string>
    <string name="str1">其他登陆方式</string>
    <string name="str2">注册</string>
    <string name="str3">手机号登陆</string>
    <string name="todo_1">TODO</string>
    <string name="todo_2">TODO</string>
    <string name="str_4">微信</string>
    <string name="str_5">QQ</string>
    <string name="str_6">网易邮箱</string>
    <string name="str_7">微博</string>
    <string name="todo_3">TODO</string>
    <string name="todo_4">TODO</string>
</resources>
